--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "paypal-rest-sdk": "^1.8.1",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "winston": "^3.13.1"
   }
 }
