--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "paypal-rest-sdk": "^1.8.1",
+    "socket.io": "^4.7.5",
     "stripe": "^16.5.0",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
