--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
+    "cron": "^3.1.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "jsonwebtoken": "^9.0.2",
