--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "cron": "^3.1.7",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^7.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^6.4.2",
     "multer": "^1.4.5-lts.1",
