--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
     "paypal-rest-sdk": "^1.8.1",
+    "qrcode": "^1.5.3",
     "socket.io": "^4.7.5",
     "stripe": "^16.5.0",
     "swagger-jsdoc": "^6.2.8",
