--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.18.1",
     "express-rate-limit": "^7.4.0",
     "jsonwebtoken": "^9.0.2",
+    "kafka-node": "^5.0.0",
     "mongoose": "^6.4.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.4",
