--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,90 @@
-version: '3'
+#version: '3.8'
+#services:
+#  zookeeper:
+#    container_name: zookeper
+#    image: wurstmeister/zookeeper
+#    ports:
+#      - 2181:2181
+#  kafka:
+#    container_name: kafka
+#    image: wurstmeister/kafka
+#    ports:
+#      - 9092:9092
+#    volumes:
+#      - ./data/kafka:/var/run/docker.sock
+#    environment:
+#      - KAFKA_ADVERTISED_HOST_NAME=kafka
+#      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+#  mongo:
+#    container_name: ecom-mongo-service
+#    image: mongo
+#    ports:
+#      - 27017:27017
+#    volumes:
+#      - ./data/mongo:/data/db
+#  postgres:
+#    container_name: postgres
+#    image: postgres
+#    ports:
+#      - 5432:5432
+#    volumes:
+#      - ./data/postgres:/var/lib/postgresql/data
+#    environment:
+#      - POSTGRES_USER=postgres
+#      - POSTGRES_PASSWORD=postgres
+#      - POSTGRES_DB=postgres
+#  ecom-aws-cloud-server:
+#    container_name: app1
+#    build: .
+#    ports:
+#      - 4009:4009
+#    volumes:
+#      - .:/usr/src/app
+#    environment:
+#      - PORT=8080
+#      - POSTGRES_URL=postgres://postgres:postgres@localhost:5432/postgres
+#      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+#      - KAFKA_TOPIC=topic1
+#    depends_on:
+#      - postgres
+#      - mongo
+#      - kafka
+
+version: '3.8'
 services:
   zookeeper:
-    image: confluentinc/cp-zookeeper:7.3.1
-    environment:
-      ZOOKEEPER_CLIENT_PORT: 2181
-      ZOOKEEPER_TICK_TIME: 2000
+    container_name: zookeper
+    image: wurstmeister/zookeeper
     ports:
-      - "2181:2181"
-
+      - 2181:2181
   kafka:
-    image: confluentinc/cp-kafka:7.3.1
+    container_name: kafka
+    image: wurstmeister/kafka
     ports:
-      - "9092:9092"
+      - 9092:9092
+    volumes:
+      - ./data/kafka:/var/run/docker.sock
     environment:
-      KAFKA_BROKER_ID: 1
-      KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
-      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
-      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
-    depends_on:
-      - zookeeper
-
-  node-app:
+      - KAFKA_ADVERTISED_HOST_NAME=kafka
+      - KAFKA_ZOOKEEPER_CONNECT=zookeeper:2181
+  mongo:
+    container_name: ecom-mongo-service
+    image: mongo
+    ports:
+      - 27017:27017
+    volumes:
+      - ./data/mongo:/data/db
+  ecom-aws-cloud-server:
+    container_name: app1
     build: .
     ports:
-      - "4009:4009"
-    environment:
-      KAFKA_HOST: kafka:9092
-    depends_on:
-      - kafka
+      - 4009:4009
     volumes:
       - .:/usr/src/app
+    environment:
+      - PORT=8080
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_TOPIC=topic1
+    depends_on:
+      - mongo
+      - kafka
