--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,7 +55,8 @@ version: '3.8'
 services:
   zookeeper:
     container_name: zookeeper
-    image: wurstmeister/zookeeper
+    image: zookeeper
+    platform: linux/arm64/v8
     ports:
       - 2181:2181
 
@@ -65,11 +66,16 @@ services:
     ports:
       - 9092:9092
     environment:
+      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./data/kafka:/kafka
+    healthcheck:
+      test: [ "CMD", "curl", "--silent", "--fail", "http://localhost:9092" ]
+      interval: 30s
+      retries: 3
 
   mongo:
     container_name: ecom-mongo-service
