--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,13 +50,13 @@
 #      - mongo
 #      - kafka
 
+
 version: '3.8'
 
 services:
   zookeeper:
     container_name: zookeeper
     image: zookeeper
-    platform: linux/arm64/v8
     ports:
       - 2181:2181
 
@@ -66,16 +66,12 @@ services:
     ports:
       - 9092:9092
     environment:
-      KAFKA_LISTENERS: PLAINTEXT://kafka:9092
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://kafka:9092
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./data/kafka:/kafka
-    healthcheck:
-      test: [ "CMD", "curl", "--silent", "--fail", "http://localhost:9092" ]
-      interval: 30s
-      retries: 3
 
   mongo:
     container_name: ecom-mongo-service
@@ -94,8 +90,8 @@ services:
       - .:/usr/src/app
     environment:
       - PORT=4009
-      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
-      - KAFKA_TOPIC=topic1
+      - KAFKA_HOST=kafka:9092
+      - KAFKA_TOPIC=todo-topic
     depends_on:
       - mongo
       - kafka
