--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1669.0",
     "chalk": "^5.3.0",
     "cors": "^2.8.5",
     "cron": "^3.1.7",
